# mailsender

./: .gitignore  Dockerfile  devbox.json  docker-compose.yml  getBouncedAddress.py  main.py  pyproject.toml  reporte.py  send_api.py  send_emails.py  utils.py
mailsender/: __init__.py  config.py  settings.py  test.yaml
mailsender/api/: main.py  middleware.py  models.py
mailsender/api/router/: auth.py  send.py  tracking.py  unsubs.py
mailsender/api/static/: comments-sent.html  resubscribed.html  styles.css  unsubscribe.html
mailsender/db/: accounts.py  conn.py  db_protocol.py  records.py
mailsender/db/migrations/: env.py
mailsender/db/migrations/versions/: c165121eba4b_init.py  da158e986ff4_add_unsubscribed_emails_table.py
mailsender/lib/: errors.py  gmail.py  message.py  sender.py  service.py
mailsender/utils/: append.py  mailinglist.py  tracking.py  validators.py
src/: config.py  db.py  lib.py  main.py  message.py  send_emails.py
src/utils/: validators.py
src/utils/api/: auth.py
